Implement prompt creating, cloning...
