# freechat-sdk/typescript/apis/CharacterApi.ts
@@ -352,6 +352,44 @@ export class CharacterApiRequestFactory extends BaseAPIRequestFactory {
     }
 
     /**
+     * Delete character by name. return the list of successfully deleted characterIds.
+     * Delete Character by Name
+     * @param name The character name to be deleted
+     */
+    public async deleteCharacterByName(name: string, _options?: Configuration): Promise<RequestContext> {
+        let _config = _options || this.configuration;
+
+        // verify required parameter 'name' is not null or undefined
+        if (name === null || name === undefined) {
+            throw new RequiredError("CharacterApi", "deleteCharacterByName", "name");
+        }
+
+
+        // Path Params
+        const localVarPath = '/api/v1/character/name/{name}'
+            .replace('{' + 'name' + '}', encodeURIComponent(String(name)));
+
+        // Make Request Context
+        const requestContext = _config.baseServer.makeRequestContext(localVarPath, HttpMethod.DELETE);
+        requestContext.setHeaderParam("Accept", "application/json, */*;q=0.8")
+
+
+        let authMethod: SecurityAuthentication | undefined;
+        // Apply auth methods
+        authMethod = _config.authMethods["bearerAuth"]
+        if (authMethod?.applySecurityAuthentication) {
+            await authMethod?.applySecurityAuthentication(requestContext);
+        }
+        
+        const defaultAuth: SecurityAuthentication | undefined = _options?.authMethods?.default || this.configuration?.authMethods?.default
+        if (defaultAuth?.applySecurityAuthentication) {
+            await defaultAuth?.applySecurityAuthentication(requestContext);
+        }
+
+        return requestContext;
+    }
+
+    /**
      * Delete the chat session.
      * Delete Chat Session
      * @param chatId Chat session identifier
@@ -1612,6 +1650,35 @@ export class CharacterApiResponseProcessor {
                 ObjectSerializer.parse(await response.body.text(), contentType),
                 "boolean", ""
             ) as boolean;
+            return new HttpInfo(response.httpStatusCode, response.headers, response.body, body);
+        }
+
+        throw new ApiException<string | Blob | undefined>(response.httpStatusCode, "Unknown API Status Code!", await response.getBodyAsAny(), response.headers);
+    }
+
+    /**
+     * Unwraps the actual response sent by the server from the response context and deserializes the response content
+     * to the expected objects
+     *
+     * @params response Response returned by the server for a request to deleteCharacterByName
+     * @throws ApiException if the response code was not in [200, 299]
+     */
+     public async deleteCharacterByNameWithHttpInfo(response: ResponseContext): Promise<HttpInfo<Array<string> >> {
+        const contentType = ObjectSerializer.normalizeMediaType(response.headers["content-type"]);
+        if (isCodeInRange("200", response.httpStatusCode)) {
+            const body: Array<string> = ObjectSerializer.deserialize(
+                ObjectSerializer.parse(await response.body.text(), contentType),
+                "Array<string>", ""
+            ) as Array<string>;
+            return new HttpInfo(response.httpStatusCode, response.headers, response.body, body);
+        }
+
+        // Work around for missing responses in specification, e.g. for petstore.yaml
+        if (response.httpStatusCode >= 200 && response.httpStatusCode <= 299) {
+            const body: Array<string> = ObjectSerializer.deserialize(
+                ObjectSerializer.parse(await response.body.text(), contentType),
+                "Array<string>", ""
+            ) as Array<string>;
             return new HttpInfo(response.httpStatusCode, response.headers, response.body, body);
         }
 
