# freechat-sdk/typescript/apis/PromptApi.ts
@@ -74,8 +74,8 @@ export class PromptApiRequestFactory extends BaseAPIRequestFactory {
     }
 
     /**
-     * Apply parameters to string type prompt template.
-     * Apply Parameters to String Prompt Template
+     * Apply parameters to prompt template.
+     * Apply Parameters to Prompt Template
      * @param promptTemplateDTO String type prompt template
      */
     public async applyPromptTemplate(promptTemplateDTO: PromptTemplateDTO, _options?: Configuration): Promise<RequestContext> {
@@ -464,6 +464,44 @@ export class PromptApiRequestFactory extends BaseAPIRequestFactory {
         // Path Params
         const localVarPath = '/api/v1/prompt/{promptId}'
             .replace('{' + 'promptId' + '}', encodeURIComponent(String(promptId)));
+
+        // Make Request Context
+        const requestContext = _config.baseServer.makeRequestContext(localVarPath, HttpMethod.DELETE);
+        requestContext.setHeaderParam("Accept", "application/json, */*;q=0.8")
+
+
+        let authMethod: SecurityAuthentication | undefined;
+        // Apply auth methods
+        authMethod = _config.authMethods["bearerAuth"]
+        if (authMethod?.applySecurityAuthentication) {
+            await authMethod?.applySecurityAuthentication(requestContext);
+        }
+        
+        const defaultAuth: SecurityAuthentication | undefined = _options?.authMethods?.default || this.configuration?.authMethods?.default
+        if (defaultAuth?.applySecurityAuthentication) {
+            await defaultAuth?.applySecurityAuthentication(requestContext);
+        }
+
+        return requestContext;
+    }
+
+    /**
+     * Delete prompt by name. return the list of successfully deleted promptIds.
+     * Delete Prompt by Name
+     * @param name The prompt name to be deleted
+     */
+    public async deletePromptByName(name: string, _options?: Configuration): Promise<RequestContext> {
+        let _config = _options || this.configuration;
+
+        // verify required parameter 'name' is not null or undefined
+        if (name === null || name === undefined) {
+            throw new RequiredError("PromptApi", "deletePromptByName", "name");
+        }
+
+
+        // Path Params
+        const localVarPath = '/api/v1/prompt/name/{name}'
+            .replace('{' + 'name' + '}', encodeURIComponent(String(name)));
 
         // Make Request Context
         const requestContext = _config.baseServer.makeRequestContext(localVarPath, HttpMethod.DELETE);
@@ -1267,6 +1305,35 @@ export class PromptApiResponseProcessor {
                 ObjectSerializer.parse(await response.body.text(), contentType),
                 "boolean", ""
             ) as boolean;
+            return new HttpInfo(response.httpStatusCode, response.headers, response.body, body);
+        }
+
+        throw new ApiException<string | Blob | undefined>(response.httpStatusCode, "Unknown API Status Code!", await response.getBodyAsAny(), response.headers);
+    }
+
+    /**
+     * Unwraps the actual response sent by the server from the response context and deserializes the response content
+     * to the expected objects
+     *
+     * @params response Response returned by the server for a request to deletePromptByName
+     * @throws ApiException if the response code was not in [200, 299]
+     */
+     public async deletePromptByNameWithHttpInfo(response: ResponseContext): Promise<HttpInfo<Array<string> >> {
+        const contentType = ObjectSerializer.normalizeMediaType(response.headers["content-type"]);
+        if (isCodeInRange("200", response.httpStatusCode)) {
+            const body: Array<string> = ObjectSerializer.deserialize(
+                ObjectSerializer.parse(await response.body.text(), contentType),
+                "Array<string>", ""
+            ) as Array<string>;
+            return new HttpInfo(response.httpStatusCode, response.headers, response.body, body);
+        }
+
+        // Work around for missing responses in specification, e.g. for petstore.yaml
+        if (response.httpStatusCode >= 200 && response.httpStatusCode <= 299) {
+            const body: Array<string> = ObjectSerializer.deserialize(
+                ObjectSerializer.parse(await response.body.text(), contentType),
+                "Array<string>", ""
+            ) as Array<string>;
             return new HttpInfo(response.httpStatusCode, response.headers, response.body, body);
         }
 
